<resources>
    <string name="app_name">Atomat</string>

    <!-- content descriptors -->
    <string name="header_image_descriptor">header image</string>
    <string name="source_icon_image_descriptor">source icon image</string>
    <string name="cancel_adding_source">cancel adding source</string>
    <string name="action_settings">Settings</string>
    <string name="source_options_image_descriptor">source options</string>
    <string name="info_icon_image_descriptor">info icon</string>

    <!-- activity / fragment names -->
    <string name="title_activity_main">Atomat</string>
    <string name="title_fragment_articles">Stories</string>
    <string name="title_fragment_sources">Sources</string>
    <string name="title_fragment_settings">Settings</string>

    <!-- nav drawer entries -->
    <string name="nav_news_title">News</string>
    <string name="nav_sources_title">Sources</string>
    <string name="nav_settings_title">Settings</string>

    <!-- strings used in widgets -->
    <string name="no_updates_snackbar">Sources are up-to-date.</string>
    <string name="feed_url">Feed URL</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="creating_source_loading">Creating source</string>
    <string name="article_loading_failed_message">Some stories could not be fetched.</string>
    <string name="learn_more">Learn More</string>
    <string name="missing_articles_dialog_title">Why are not all stories displayed?</string>
    <string name="missing_articles_dialog_content">To fetch the latest stories from your sources, Atomat polls the respective RSS feeds at a certain update frequency. With each update a number of stories is fetched. This number is set by the news outlet. If too much time has passed since the last update, some articles might not appear in your feed. You can change the update frequency in the settings.</string>

    <!-- url options entries -->
    <string name="delete_source_menu_option">Delete source</string>

    <!-- strings related to settings -->
    <string name="pref_theme_category_title">Theme</string>
    <string name="pref_theme_day_night_title">DayNight</string>
    <string name="pref_theme_day_night_summary">Theme switches automatically</string>
    <string name="pref_theme_set">Set Theme</string>
    <string name="pref_theme_option_light_theme">Light Theme</string>
    <string name="pref_theme_option_dark_theme">Dark Theme</string>
    <string name="pref_sync_category_title">Synchronization</string>
    <string name="pref_cleanup_summary">Delete stories older than %s</string>
    <string name="pref_frequency_summary">Update sources %s</string>
    <string name="pref_cleanup_title">Auto Cleanup</string>
    <string name="pref_frequency_title">Update Frequency</string>
    <string name="pref_cleanup_dialog_title">Delete stories older than</string>
    <string name="pref_frequency_dialog_title">Update sources</string>
    <string name="pref_cleanup_1w">1 week</string>
    <string name="pref_cleanup_2w">2 weeks</string>
    <string name="pref_cleanup_3w">3 weeks</string>
    <string name="pref_cleanup_1m">1 month</string>
    <string name="pref_cleanup_2m">2 months</string>
    <string name="pref_frequency_1h">every hour</string>
    <string name="pref_frequency_2h">every 2 hours</string>
    <string name="pref_frequency_3h">every 3 hours</string>
    <string name="pref_frequency_6h">every 6 hours</string>
    <string name="pref_frequency_12h">every 12 hours</string>
    <string name="pref_frequency_24h">every 24 hours</string>
    <string name="pref_frequency_15m">every 15 minutes</string>    <!-- TODO: Remove 15 minutes -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- error strings -->
    <string name="retry">Retry</string>
    <string name="error_duplicate_source">This website is already in your sources</string>
    <string name="error_no_xml">Enter an URL that points to an XML file</string>
    <string name="error_invalid_url">Enter a valid URL</string>
    <string name="error_network">No connection</string>
    <string name="error_invalid_rss">RSS feed format could not be read</string>

    <!-- placeholder strings -->
    <!-- TODO: Remove placeholder strings -->
    <string name="debug_title">Android O is supposed to make Android updates arrive faster</string>
    <string name="debug_author">Andrew Liptak</string>
    <string name="debug_source_title">The Verge -  All Posts</string>
    <string name="debug_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>