<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_theme_category_title"
        android:key="pref_theme_category">

        <SwitchPreference
            android:key="pref_day_night_theme"
            android:title="@string/pref_theme_day_night_title"
            android:summary="@string/pref_theme_day_night_summary"
            android:defaultValue="true"
            android:disableDependentsState="true"/>

        <ListPreference
            android:dependency="pref_day_night_theme"
            android:key="pref_theme_dark"
            android:title="@string/pref_theme_set"
            android:summary="%s"
            android:dialogTitle="@string/pref_theme_set"
            android:entries="@array/pref_theme_keys"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sync_category_title"
        android:key="pref_sync_category">

        <ListPreference
            android:key="pref_frequency"
            android:title="@string/pref_frequency_title"
            android:summary="@string/pref_frequency_summary"
            android:dialogTitle="@string/pref_frequency_dialog_title"
            android:entries="@array/pref_frequency_keys"
            android:entryValues="@array/pref_frequency_values"
            android:defaultValue="7200000" />

        <ListPreference
            android:key="pref_cleanup"
            android:title="@string/pref_cleanup_title"
            android:summary="@string/pref_cleanup_summary"
            android:dialogTitle="@string/pref_cleanup_dialog_title"
            android:entries="@array/pref_cleanup_keys"
            android:entryValues="@array/pref_cleanup_values"
            android:defaultValue="1209600" />

    </PreferenceCategory>

</PreferenceScreen>