<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="122dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.timkonieczny.rss.SourcesFragment"
        android:background="@color/cardview_dark_background"
        android:baselineAligned="false"
        android:id="@+id/source_background">

        <ImageView
            android:id="@+id/source_icon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/debugicon"
            android:layout_gravity="center"
            android:contentDescription="@string/source_icon_image_descriptor" />

        <TextView
            android:id="@+id/source_title"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/debug_source_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/source_item_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:src="@drawable/ic_more_vert_white_24dp"
        android:contentDescription="@string/source_options_image_descriptor" />
</RelativeLayout>