<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:elevation="2dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:tint="@color/colorText"
                android:src="@drawable/ic_cloud_download_black_24dp"
                android:id="@+id/article_missing_icon"
                android:contentDescription="@string/info_icon_image_descriptor" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/source_title"
                android:layout_toEndOf="@id/article_missing_icon"
                android:textStyle="bold"
                android:textColor="@color/colorText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/article_missing_icon"
                android:layout_below="@id/source_title"
                android:text="@string/article_loading_failed_message"/>
        </RelativeLayout>

        <Button
            android:id="@+id/loading_failed_learn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn_more"
            android:layout_margin="8dp"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>
</android.support.v7.widget.CardView>